--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "file-loader": "^0.8.5",
     "material-ui": "^0.14.4",
     "node-sass": "^3.4.2",
+    "react-router": "^2.0.1",
     "react-tap-event-plugin": "^0.2.2",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.2",
